ClassUtil analiza la Anotacion

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -30,6 +30,10 @@
                                          action="#{indexController.saludar()}"
                                          styleClass="ui-button-secondary" style="margin-left: .5em"
                                          update=":form:growl"/>
+                        <p:commandButton value="Repository Annotation(Country)" 
+                                         action="repositoryanotation"
+                                         styleClass="ui-button-secondary" style="margin-left: .5em"
+                                         update=":form:growl"/>
                     </f:facet>
 
                 </p:card>
