--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -32,7 +32,11 @@
                                          update=":form:growl"/>
                         <p:commandButton value="Repository Annotation(Country)" 
                                          action="repositoryanotation"
-                                         styleClass="ui-button-secondary" style="margin-left: .5em"
+                                         styleClass="ui-button-primary" style="margin-left: .5em"
+                                         update=":form:growl"/>
+                        <p:commandButton value="Repository Entity Base(Person)" 
+                                         action="repositoryanotation"
+                                         styleClass="ui-button-primary" style="margin-left: .5em"
                                          update=":form:growl"/>
                     </f:facet>
 
