--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -30,60 +30,19 @@
                                          action="#{indexController.saludar()}"
                                          styleClass="ui-button-secondary" style="margin-left: .5em"
                                          update=":form:growl"/>
-                        <p:commandButton value="Repository Annotation(Country)" 
-                                         action="repositoryanotation"
+                        <p:commandButton value="InterfaceRepository(Country)" 
+                                         action="interfacerepository"
                                          styleClass="ui-button-primary" style="margin-left: .5em"
                                          update=":form:growl"/>
-                        <p:commandButton value="Repository Entity Base(Person)" 
-                                         action="repositoryanotation"
-                                         styleClass="ui-button-primary" style="margin-left: .5em"
+                        <p:commandButton value="Legacy Repository(Person)" 
+                                         action="legacy"
+                                         styleClass="ui-button-danger" style="margin-left: .5em"
                                          update=":form:growl"/>
                     </f:facet>
 
                 </p:card>
 
-                <p:card style="width: 25em">
-                    <f:facet name="header">
-                        <img alt="user header" src="../../resources/demo/images/usercard.png"/>
-                    </f:facet>
-                    <f:facet name="title">
-                        Jmoordb
-                    </f:facet>
-                    <f:facet name="subtitle">
-                        Persona Crud
-                    </f:facet>
-
-                    <p>Ingrese los datos de la persona
-                        y ejecute las operaciones!</p>
-                    <p> <p:outputLabel value="Id"/>
-                        <p:inputText value="#{indexController.persona.id}"/></p>
-                    <p> <p:outputLabel value="name"/>
-                        <p:inputText value="#{indexController.persona.name}"/></p>
-
-                    <f:facet name="footer">
-                        <p:commandButton icon="pi pi-check" value="Save"
-                                         action="#{indexController.saludar()}"
-                                         styleClass="ui-button-secondary" style="margin-left: .5em"
-                                         update=":form:growl"/>
-                        <p:commandButton icon="pi pi-check" value="Delete" styleClass="ui-button-danger" style="margin-left: .5em"/>
-                        <p:commandButton icon="pi pi-check" value="Find"/>
-                        <p:commandButton icon="pi pi-times" value="Cancel" styleClass="ui-button-secondary" style="margin-left: .5em"/>
-                    </f:facet>
-                </p:card>
-
-                <p:card style="width: 25em">
-                    <p:dataTable value="#{indexController.personaList}"
-                                 lazy="false"
-                                 var="item" id="datatable">
-                    <p:column headerText="id">
-                        <p:outputLabel value="#{item.id}"/>
-                    </p:column>
-                    <p:column headerText="name">
-                        <p:outputLabel value="#{item.name}"/>
-                    </p:column>
-                    </p:dataTable>
-
-                </p:card>
+   
 
 
 
