--- a/src/main/webapp/decorator.xhtml
+++ b/src/main/webapp/decorator.xhtml
@@ -19,7 +19,7 @@
                 <p:growl id="growl"/>
                 <p:card style="width: 25rem; margin-bottom: 2em">
                     <f:facet name="title">
-                     Legacy
+                  Decorator
                     </f:facet>
 
                    
